# discord-bot-template

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: commands.rs  config.rs  handler.rs  helpers.rs  lib.rs  main.rs
