[package]
name = "bot-rs"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Discord bot template"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.12"
lazy_static = "1.4"
tokio = { version = "1.9", features = ["macros", "rt-multi-thread", "time"] }